--- a/index.html
+++ b/index.html
@@ -29,20 +29,29 @@
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Memory</h4>
-                        <button class="border border-gray-400 rounded px-3 py-2">8GB unified memory</button>
-                        <button class="border border-gray-400 rounded px-3 py-2">16GB unified memory</button>
+                        <button id="8gb-cost" class="border border-gray-400 rounded px-3 py-2">8GB
+                            unified
+                            memory</button>
+                        <button id="16gb-cost" class="border border-gray-400 rounded px-3 py-2">16GB
+                            unified
+                            memory</button>
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Storage</h4>
-                        <button class="border border-gray-400 rounded px-3 py-2">256GB SSD storage</button>
-                        <button class="border border-gray-400 rounded px-3 py-2">512GB SSD storage</button>
-                        <button class="border border-gray-400 rounded px-3 py-2">1TB SSD storage</button>
+                        <button id="256gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">256GB SSD
+                            storage</button>
+                        <button id="512gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">512GB SSD
+                            storage</button>
+                        <button id="1tb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">1TB SSD
+                            storage</button>
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Choose your delivery option</h4>
-                        <button class="border border-gray-400 rounded px-3 py-2">Friday,Aug 25 Free
+                        <button id="free-delivery-cost" class="border border-gray-400 rounded px-3 py-2">Friday,Aug 25
+                            Free
                             Delivery</button>
-                        <button class="border border-gray-400 rounded px-3 py-2">Monday,Aug21 Delivery $20</button>
+                        <button id="premium-delivery-cost" class="border border-gray-400 rounded px-3 py-2">Monday,Aug21
+                            Delivery $20</button>
                     </div>
                     <div class="mt-8 w-2/4 flex justify-between">
                         <div>
@@ -54,7 +63,7 @@
                             <hr>
                             <h4 class="font-bold mb-2">Delivery Charge</h4>
                             <hr>
-                            <h4 class="font-bold mb-2">Total Price</h4>
+                            <h4 id="total-amount" class="font-bold mb-2">Total Price</h4>
                             <p class="font-semibold">Add Promo code</p>
                             <input class="border border-gray-400 rounded mb-2" type="text"><br>
                             <button class="border bg-red-600 px-4 py-2 rounded text-white">Apply</button>
@@ -63,11 +72,11 @@
                         <div>
                             <h4 class="font-bold mb-2">$<span>1299</span></h4>
                             <hr>
-                            <h4 class="font-bold mb-2">$<span>0</span></h4>
+                            <h4 class="font-bold mb-2">$<span id="extra-memory-cost">0</span></h4>
                             <hr>
-                            <h4 class="font-bold mb-2">$<span>0</span></h4>
+                            <h4 class="font-bold mb-2">$<span id="extra-storage-cost">0</span></h4>
                             <hr>
-                            <h4 class="font-bold mb-2">$<span>0</span></h4>
+                            <h4 class="font-bold mb-2">$<span id="delivery-cost">0</span></h4>
                             <hr>
                             <h4 class="font-bold mb-2">$<span>1299</span></h4>
                         </div>
@@ -85,7 +94,7 @@
         </section>
     </main>
     <!-- js link  -->
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
