--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                             <hr>
                             <h4 class="font-bold mb-2">Delivery Charge</h4>
                             <hr>
-                            <h4 id="total-amount" class="font-bold mb-2">Total Price</h4>
+                            <h4 class="font-bold mb-2">Total Price</h4>
                             <p class="font-semibold">Add Promo code</p>
                             <input class="border border-gray-400 rounded mb-2" type="text"><br>
                             <button class="border bg-red-600 px-4 py-2 rounded text-white">Apply</button>
 
                         </div>
                         <div>
-                            <h4 class="font-bold mb-2">$<span>1299</span></h4>
+                            <h4 class="font-bold mb-2">$<span id="unchanged-cost">1299</span></h4>
                             <hr>
                             <h4 class="font-bold mb-2">$<span id="extra-memory-cost">0</span></h4>
                             <hr>
@@ -78,7 +78,7 @@
                             <hr>
                             <h4 class="font-bold mb-2">$<span id="delivery-cost">0</span></h4>
                             <hr>
-                            <h4 class="font-bold mb-2">$<span>1299</span></h4>
+                            <h4 class="font-bold mb-2">$<span id="total-amount">1299</span></h4>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
             <div>
                 <hr>
                 <div>
-                    <h2 class="text-4xl text-center mt-3">Total:$<span>1299</span></h2>
+                    <h2 class="text-4xl text-center mt-3">Total:$<span id="discount-amount">1299</span></h2>
                 </div>
             </div>
         </section>
