--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="w-3/4 mx-auto">
-            <div class="grid grid-cols-2 gap-12 mt-16">
+            <div class="grid lg:grid-cols-2 gap-12 mt-12">
                 <div>
                     <img src="images/mac.png" alt="">
                 </div>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Memory</h4>
-                        <button id="8gb-cost" class="border border-gray-400 rounded px-3 py-2">8GB
+                        <button id="8gb-cost" class="border border-gray-400 rounded px-3 py-2 mb-3">8GB
                             unified
                             memory</button>
                         <button id="16gb-cost" class="border border-gray-400 rounded px-3 py-2">16GB
@@ -38,20 +38,20 @@
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Storage</h4>
-                        <button id="256gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">256GB SSD
+                        <button id="256gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2 mb-3">256GB SSD
                             storage</button>
-                        <button id="512gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">512GB SSD
+                        <button id="512gb-ssd-cost" class="border border-gray-400 rounded px-3 py-2 mb-3">512GB SSD
                             storage</button>
                         <button id="1tb-ssd-cost" class="border border-gray-400 rounded px-3 py-2">1TB SSD
                             storage</button>
                     </div>
                     <div class="mt-8">
                         <h4 class="font-bold mb-2">Choose your delivery option</h4>
-                        <button id="free-delivery-cost" class="border border-gray-400 rounded px-3 py-2">Friday,Aug 25
-                            Free
-                            Delivery</button>
-                        <button id="premium-delivery-cost" class="border border-gray-400 rounded px-3 py-2">Monday,Aug21
-                            Delivery $20</button>
+                        <button id="free-delivery-cost" class="border border-gray-400 rounded px-3 py-2 mb-3">Friday,Aug
+                            25 FREE prime Delivery</button><br>
+                        <button id="premium-delivery-cost" class="border border-gray-400 rounded px-3 py-2">Monday,Aug
+                            21
+                            Delivery Charge $20</button>
                     </div>
                     <div class="mt-8 w-2/4 flex justify-between">
                         <div>
@@ -88,6 +88,7 @@
                 </div>
             </div>
         </section>
+        <!-- total area last & bonus section  -->
         <section class="w-3/4 mx-auto mt-4 mb-8">
             <div>
                 <hr>
